logs/webunit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webunit'...
Compiling './lib/python3.5/site-packages/webunit/HTMLParser.py'...
***   File "./lib/python3.5/site-packages/webunit/HTMLParser.py", line 186
    "invalid '<' construct: %s" % `rawdata[i:i+2]`,
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webunit/SimpleDOM.py'...
***   File "./lib/python3.5/site-packages/webunit/SimpleDOM.py", line 142
    raise ValueError, 'No %r with id %r'%(name, id)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webunit/cookie.py'...
***   File "./lib/python3.5/site-packages/webunit/cookie.py", line 63
    raise Error, 'Cookie domain "%s" has no "."'%domain
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webunit/webunittest.py'...
***   File "./lib/python3.5/site-packages/webunit/webunittest.py", line 158
    except HTTPError, error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webunit-1.3.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
